package com.mef.parkauto.entity;

/**
 * Rôles utilisateurs définis dans le cahier des charges (Section 5 — Profils utilisateurs).
 */
public enum RoleType {
    ADMIN,
    GESTIONNAIRE_CENTRAL,
    GESTIONNAIRE_LOCAL,
    RESPONSABLE_FINANCIER,
    RESPONSABLE_SERVICE,
    CONDUCTEUR,
    CONSULTATION
}
