@startuml
!include _theme.puml
title Diagramme de classes - Securite et utilisateurs
hide circle
skinparam classAttributeIconSize 0

abstract class BaseEntity {
  - id: Long
  - dateCreation: LocalDateTime
  - dateModification: LocalDateTime
  - createdBy: String
  - updatedBy: String
}

class Utilisateur <<Entity, UserDetails>> {
  - matricule: String
  - nom: String
  - prenom: String
  - email: String
  - motDePasse: String
  - sel: String
  - doitChangerMotDePasse: boolean
  - telephone: String
  - direction: String
  - service: String
  - region: String
  - statut: UserStatus
  + getAuthorities(): Collection
  + isEnabled(): boolean
}

class Role <<Entity>> {
  - nom: RoleType
  - description: String
}

class JournalAction <<Entity, Immutable>> {
  - id: Long
  - username: String
  - timestamp: LocalDateTime
  - module: String
  - action: String
  - entityName: String
  - entityId: Long
  - oldValue: Text
  - newValue: Text
  - ipAddress: String
}

enum RoleType {
  ADMIN
  GESTIONNAIRE_CENTRAL
  GESTIONNAIRE_LOCAL
  RESPONSABLE_FINANCIER
  RESPONSABLE_SERVICE
  CONDUCTEUR
  CONSULTATION
}

enum UserStatus {
  ACTIVE
  LOCKED
  ARCHIVED
}

class JwtService <<Service>> {
  + generateAccessToken(user): String
  + generateRefreshToken(user): String
  + validateToken(token): boolean
  + extractUsername(token): String
}

class AuditService <<Service>> {
  + log(module, action, entity, values, ip)
}

BaseEntity <|-- Utilisateur
BaseEntity <|-- Role
Role "1" <-- "0..*" Utilisateur : role
Role --> RoleType
Utilisateur --> UserStatus
Utilisateur ..> JwtService : authentification
Utilisateur ..> JournalAction : actions tracees
AuditService ..> JournalAction : cree
JwtService ..> Utilisateur : identite / autorites
@enduml

